# text-to-image-diffusion

./: .gitignore  Dockerfile  Explorative_Data_Analysis.ipynb  Exploratory_Data_Analysis.ipynb  Explore_Data.ipynb  Explore_Model_Components.ipynb  README.md  commands to run.txt  docker-compose.yml  in_docker.txt  pyproject.toml
integration_test/: vae_integration_test_cases.py
src/data_loading/: data_loaders.py  image_utils.py
src/utils/: image_utils.py  some_other_name.py
src/vae/: VAE.ipynb  api.py  train.py  vae_utils.py
terraform/: ecr.tf  lambda-iam.tf  lambda.tf  main.tf  push-docker.tf  variables.tf
terraform/iam/: groups.tf  lambda.tf  local-cli.tf  main.tf  variables.tf  what_logged_in_user_needs_to_create_ci_users.json
tests/: dependencies_test_cases.py  forward_noise_test_cases.py  image_loading_test_cases.py  matplotlib_test_utils.py
tests/vae/: api_test_cases.py  vae_test_cases.py  vae_utils_test_cases.py
